<resources>
    <string name="app_name">SuperApp</string>
    <string name="main_screen_text">This is main Screen</string>
    <string name="service">Service</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="enter_the_number_notifications">Enter the count of notifications</string>
    <string name="insert_number">Insert the number</string>
    <string name="service_finished">Notifications have been shown</string>
    <string name="service_work">Service work</string>
    <string name="serviceNotification_still_works">Your ServiceNotification still works</string>
    <string name="content_provider">Content provider</string>
    <string name="not_permission">Requires set permissions</string>
    <string name="not_contact">List of contacts is empty</string>
    <string name="home">HOME</string>
    <string name="textview">TextView</string>
    <string name="list_of_contact">List of contact</string>
    <string name="text_view">TextView</string>
    <string name="edit_text">EditText</string>
    <string name="read_full">Read full</string>
    <string name="long_text">Available in Android 9 (API level 28) and higher, the magnifier widget is a virtual magnifying glass that displays an enlarged copy of a chosen View through an overlay pane that represents the lens. The feature improves the text insertion and selection user experience: when applying the magnifier to text, a user can precisely position the cursor or the selection handles by viewing the magnified text in a pane that follows their finger. Figure 1 below showcases the way the magnifier facilitates selecting text. The magnifier APIs are not tied to text, and this widget can be used in a variety of use cases, such as reading small type or enlarging hard-to-see place names on maps.</string>
    <string name="textbigblack_style">TextBigBlack Style</string>
    <string name="textmediumblack_style">TextMediumBlack Style</string>
    <string name="textview_monospace_font">textview monospace font</string>
    <string name="textview_casual_font">textview casual font</string>
    <string name="edittext">EditText</string>
    <string name="login_text">login</string>
    <string name="password_text">password</string>
    <string name="login">login</string>
    <string name="login_">login:</string>
    <string name="password_">password:</string>
    <string name="has_focus">EditText has focus</string>
    <string name="has_not_focus">EditText has not focus</string>
    <string name="button_with_icon">Button with icon</string>
    <string name="button_with_drawable">button with drawable</string>
    <string name="image_drawable">Image drawable</string>
    <string name="image_button">Image button</string>
    <string name="btn_text">Button</string>
    <string name="app_bar">App-bar</string>
    <string name="toolbar">ToolBar</string>
    <string name="imageview">ImageView</string>
    <string name="spinner">Spinner</string>
    <string name="adapterview">AdapterView</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="progress_complete">Progress complete</string>
    <string name="progress_button">Progress button</string>
    <string name="success_text">Success</string>
    <string name="buttons_text">Buttons</string>
    <string name="app_bar_text">App bar</string>
    <string name="settings">Settings</string>
    <string name="setting_menu">Setting menu</string>
    <string name="like_menu">Like menu</string>
    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="search">Search</string>
    <string name="collapsing_toolbar_layout_text">CollapsingToolbarLayout</string>
    <string name="select_image_from_camera">Select image from camera</string>
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string name="image_view_text">Image View</string>
    <string name="work_manager">Work manager</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="start_workmanager">Start WorkManager</string>
</resources>