<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/home"
                android:layout_width="wrap_content"
                style="@style/TextNormWhite"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        tools:text = "This is main Screen"
        style="@style/TextNormBlack"/>

    <Button
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/service"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        style="@style/SuppAppButton"/>

    <Button
        android:id="@+id/content_provider"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/content_provider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        style="@style/SuppAppButton"/>

</LinearLayout>